fix vipsffm warning